maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:7: error: ';' expected but '[' found.
        return [i,j]
               ^